[package]
name = "harold-nfc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", features = ["blocking", "json"] }
serde_json = "1.0.64"
serde = { version = "1.0.126", features = ["derive"] }
gatekeeper-members = "0.4.1"
# gatekeeper-members = { path = "../gatekeeper-members" }
chrono = "0.4.19"
rand = "0.8.4"
env_logger = "0.11.2"
